--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
       <input type="hidden" name="sid1" value="ads">
       <input type="hidden" name="sid2" value="vova">
       <input type="hidden" name="sid3" value="vova">
-      <input type="hidden" name="redirect_url" value="https://amazinghealth.github.io/germitox-ita/success/index.html">
+      <input type="hidden" name="redirect_url" value="https://hondrostrong.github.io/Italy/success/index.html">
           </form>
           <div class="desc purp lt6">* Quantità di confezioni con <span style="white-space: nowrap;"> lo sconto<span class="pack_count"></span></span></div>
         </div>
@@ -236,7 +236,7 @@
       <input type="hidden" name="sid1" value="ads">
       <input type="hidden" name="sid2" value="vova">
       <input type="hidden" name="sid3" value="vova">
-      <input type="hidden" name="redirect_url" value="https://amazinghealth.github.io/germitox-ita/success/index.html">
+      <input type="hidden" name="redirect_url" value="https://hondrostrong.github.io/Italy/success/index.html">
           </form>
           <div class="desc purp lt37">* Qualità di confezioni con <span style="white-space: nowrap;">lo sconto -<span class="pack_count"></span></span></div>
         </div>
@@ -393,7 +393,7 @@
       <input type="hidden" name="sid1" value="ads">
       <input type="hidden" name="sid2" value="vova">
       <input type="hidden" name="sid3" value="vova">
-      <input type="hidden" name="redirect_url" value="https://amazinghealth.github.io/germitox-ita/success/index.html">
+      <input type="hidden" name="redirect_url" value="https://hondrostrong.github.io/Italy/success/index.html">
           </form>
           <div class="desc purp lt102">* Quantità di confezioni con<span style="white-space: nowrap;">lo sconto <span class="pack_count"></span></span></div>
         </div>
